# hebi_rosie_ros_demo

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  package.xml
gains/: rosie_arm_szg_gains.xml
hrdf/: rosie_arm.hrdf  rosie_arm_szg.hrdf
launch/: ROSie.launch  VisionThreshold.launch
parameters/: arm.txt  calibration.txt  colors.txt  diff_drive_modules.txt  modules.txt
scripts/: gripper_service_node.py
src/: demo_central.cpp  gripper_node.cpp  vision_process.cpp  vision_threshold.cpp
