<?xml version="1.0"?>
<package format="2">
  <name>hebi_rosie_demo</name>
  <version>1.0.0</version>
  <description>A complete demo using the HEBI Rosie platform and an Intel Realsense camera</description>
  <maintainer email="matt@hebirobotics.com">hebi</maintainer>
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/example_nodes</url> -->

  <author email="matt@hebirobotics.com">Matthew Tesch</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hebi_cpp_api</depend>
  <depend>hebi_cpp_api_examples</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>

<export />
</package>
